<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_app_icon"
        android:name="@string/action_app_icon"
        android:title="@string/action_app_icon"
        android:orderInCategory="300" />
    <item
        android:id="@+id/action_app_version"
        android:name="@string/action_app_version"
        android:title="@string/action_app_version"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bd_copy"
        android:name="@string/action_bd_copy"
        android:title="@string/action_bd_copy"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_populate_db"
        android:name="@string/action_populate_db"
        android:title="@string/action_populate_db"
        android:orderInCategory="400"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_db_delete_all"
        android:name="@string/action_db_delete_all"
        android:title="@string/action_db_delete_all"
        android:orderInCategory="500"
        app:showAsAction="never" />
    <item
        android:id="@+id/lab"
        android:title="LAB"
        android:icon="@drawable/ic_image_arrow"
        app:showAsAction="ifRoom"/>

</menu>
